updated frontend url2

--- a/client/.env
+++ b/client/.env
@@ -7,4 +7,4 @@ VITE_APP_ID = 1:326757202600:web:de8dfad92c50e01ef2209d
 VITE_MEASUREMENT_ID = G-WSYT8PQG20
 
 
-VITE_API_URI = http://localhost:8000
+VITE_API_URI = https://taskmate-server.onrender.com
